--- a/2025_10_29/static/style.css
+++ b/2025_10_29/static/style.css
@@ -4,11 +4,16 @@ html, body
     padding: 0;
 }
 
+body
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 header
 {
     /*height: 150px;*/
     width: 100%;
-    float: left;
     background-color: #aabbcc;
     box-shadow: 0 0 10px black;
 }
@@ -31,8 +36,6 @@ header > nav
 main
 {
     width: 100%;
-    height: 800px;
-    float: left;
 }
 main > p
 {
@@ -40,7 +43,6 @@ main > p
 }
 footer
 {
-    float: left;
     width: 100%;
     height: 100px;
     display: flex;
