--- a/2026_01_14/app/src/components/Post/Post.module.scss
+++ b/2026_01_14/app/src/components/Post/Post.module.scss
@@ -8,6 +8,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: all 550ms ease;
+
+  &:hover
+  {
+    transform: scale(1.2, 1.2);
+  }
 
   h2
   {
