--- a/2026_01_14/app/src/components/Categories/Categories.module.css
+++ b/2026_01_14/app/src/components/Categories/Categories.module.css
@@ -16,6 +16,18 @@
 }
 .List li {
   font-size: 2rem;
+  transition: all 300ms ease-in;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+}
+.List li:hover {
+  transform: scale(1.1, 1.1);
+  background-color: #c7c7c7;
+}
+.List li a {
+  color: black;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=Categories.module.css.map */
