--- a/2026_01_14/app/src/components/Categories/Categories.module.scss
+++ b/2026_01_14/app/src/components/Categories/Categories.module.scss
@@ -18,5 +18,21 @@
 
   li {
     font-size: 2rem;
+    transition: all 300ms ease-in;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
+
+    &:hover
+    {
+      transform: scale(1.1, 1.1);
+      background-color: #c7c7c7;
+    }
+
+    a
+    {
+      color: black;
+      text-decoration: none;
+    }
   }
 }
