--- a/2026_02_04/app/src/index.css
+++ b/2026_02_04/app/src/index.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+*::before, *::after {
+  box-sizing: border-box;
+}
 
 html {
   font-family: Roboto, sans-serif;
@@ -10,6 +13,12 @@ html {
 }
 html body {
   background-color: #f8f8f8;
+}
+html #root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=index.css.map */
