--- a/2026_02_04/app/src/index.scss
+++ b/2026_02_04/app/src/index.scss
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  &::before, &::after {
+    box-sizing: border-box;
+  }
 }
 
 html {
@@ -10,5 +14,11 @@ html {
 
   body {
     background-color: #f8f8f8;
+  }
+  #root {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
