setup the Post page

--- a/2026_02_04/app/src/pages/Post/Post.module.scss
+++ b/2026_02_04/app/src/pages/Post/Post.module.scss
@@ -1,1 +1,10 @@
+.Post{
 
+  &Loading, &Error{
+    font-size: 3rem;
+    color: #ff69b4;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+}
