--- a/2026_02_04/app/src/pages/Post/Post.module.css
+++ b/2026_02_04/app/src/pages/Post/Post.module.css
@@ -1,3 +1,9 @@
-
+.PostLoading, .PostError {
+  font-size: 3rem;
+  color: #ff69b4;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
 
 /*# sourceMappingURL=Post.module.css.map */
