--- a/2026_02_04/app/src/pages/Post/Post.module.css
+++ b/2026_02_04/app/src/pages/Post/Post.module.css
@@ -1,3 +1,11 @@
+.Post h5 {
+  font-size: 2.4rem;
+  text-align: center;
+}
+.Post p {
+  font-size: 1.6rem;
+  text-align: center;
+}
 .PostLoading, .PostError {
   font-size: 3rem;
   color: #ff69b4;
