repair css of the Posts page

--- a/2026_02_04/app/src/pages/Posts/Posts.module.scss
+++ b/2026_02_04/app/src/pages/Posts/Posts.module.scss
@@ -7,25 +7,24 @@
 
 .Posts
 {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  width: 80%;
+  max-width: 140rem;
+  margin-inline: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-block: 4rem;
   gap: 2rem;
-  flex-wrap: wrap;
-  width: 100%;
-  padding-block: 3rem;
-  padding-inline: 4rem;
 
   &Loading, &Error{
     font-size: 3rem;
-    color: #ff69b4;
+    color: #646cff;
     text-align: center;
     grid-column-start: 1;
     grid-column-end: 4;
   }
 
   &Post {
-    border: 0.1rem solid #ff69b4;
+    border: 0.1rem solid #646cff;
     border-radius: 0.5rem;
     padding: 1.5rem;
     display: flex;
@@ -35,7 +34,7 @@
     &Title {
       font-size: 2rem;
       text-transform: uppercase;
-      color: #ff69b4;
+      color: #646cff;
       margin-bottom: 1.5rem;
     }
 
@@ -47,7 +46,7 @@
     &Link {
       display: block;
       width: fit-content;
-      background-color: #ff69b4;
+      background-color: #646cff;
       padding: 1rem 1.5rem;
       color: #fff;
       font-size: 1.4rem;
@@ -56,7 +55,7 @@
       transition: background-color 0.3s ease-in-out;
 
       &:hover {
-        background-color: darken(#ff69b4, 40);
+        background-color: darken(#646cff, 40);
       }
     }
   }
