--- a/2026_02_04/app/src/components/Footer/Footer.module.scss
+++ b/2026_02_04/app/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .Footer {
-  background-color: #ff69b4;
+  background-color: #646cff;
   text-align: center;
   padding-block: 1.5rem;
   font-size: 1.6rem;
