--- a/2026_02_04/app/src/pages/Posts/Posts.module.css
+++ b/2026_02_04/app/src/pages/Posts/Posts.module.css
@@ -5,24 +5,23 @@
 }
 
 .Posts {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  width: 80%;
+  max-width: 140rem;
+  margin-inline: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-block: 4rem;
   gap: 2rem;
-  flex-wrap: wrap;
-  width: 100%;
-  padding-block: 3rem;
-  padding-inline: 4rem;
 }
 .PostsLoading, .PostsError {
   font-size: 3rem;
-  color: #ff69b4;
+  color: #646cff;
   text-align: center;
   grid-column-start: 1;
   grid-column-end: 4;
 }
 .PostsPost {
-  border: 0.1rem solid #ff69b4;
+  border: 0.1rem solid #646cff;
   border-radius: 0.5rem;
   padding: 1.5rem;
   display: flex;
@@ -32,7 +31,7 @@
 .PostsPostTitle {
   font-size: 2rem;
   text-transform: uppercase;
-  color: #ff69b4;
+  color: #646cff;
   margin-bottom: 1.5rem;
 }
 .PostsPostBody {
@@ -42,7 +41,7 @@
 .PostsPostLink {
   display: block;
   width: fit-content;
-  background-color: #ff69b4;
+  background-color: #646cff;
   padding: 1rem 1.5rem;
   color: #fff;
   font-size: 1.4rem;
@@ -51,7 +50,7 @@
   transition: background-color 0.3s ease-in-out;
 }
 .PostsPostLink:hover {
-  background-color: #9c004e;
+  background-color: rgb(0, 7.7935483871, 151);
 }
 
 /*# sourceMappingURL=Posts.module.css.map */
