--- a/2026_02_11/app/src/components/Navbar/Navbar.module.css
+++ b/2026_02_11/app/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,8 @@
 .Navbar {
   width: 100%;
+  position: sticky;
+  box-shadow: 0 0 5px 0 black;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
