--- a/2026_02_11/app/src/index.scss
+++ b/2026_02_11/app/src/index.scss
@@ -20,5 +20,11 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
+    height: 100%;
+
+    div:last-of-type {
+      display: none;
+    }
   }
 }
