--- a/2026_02_11/app/src/pages/Categories/Categories.module.css
+++ b/2026_02_11/app/src/pages/Categories/Categories.module.css
@@ -1,10 +1,14 @@
-.Heading {
+.Categories {
   width: 100%;
+  height: 100%;
+}
+.CategoriesHeading {
+  width: 100%;
+  font-size: 3.2rem;
   text-align: center;
   margin-block: 3rem;
 }
-
-.List {
+.CategoriesList {
   list-style-type: none;
   width: 100%;
   display: flex;
@@ -14,18 +18,18 @@
   justify-content: center;
   gap: 3rem;
 }
-.List li {
+.CategoriesList li {
   font-size: 2rem;
   transition: all 300ms ease-in;
   cursor: pointer;
   padding: 5px;
   border-radius: 5px;
 }
-.List li:hover {
+.CategoriesList li:hover {
   transform: scale(1.1, 1.1);
   background-color: #c7c7c7;
 }
-.List li a {
+.CategoriesList li a {
   color: black;
   text-decoration: none;
 }
