--- a/2026_02_11/app/src/pages/Categories/Categories.module.scss
+++ b/2026_02_11/app/src/pages/Categories/Categories.module.scss
@@ -1,38 +1,45 @@
-.Heading
+.Categories
 {
-  width: 100%;
-  text-align: center;
-  margin-block: 3rem;
-}
+    width: 100%;
+    height: 100%;
 
-.List
-{
-  list-style-type: none;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
-
-  li {
-    font-size: 2rem;
-    transition: all 300ms ease-in;
-    cursor: pointer;
-    padding: 5px;
-    border-radius: 5px;
-
-    &:hover
+    &Heading
     {
-      transform: scale(1.1, 1.1);
-      background-color: #c7c7c7;
+        width: 100%;
+        font-size: 3.2rem;
+        text-align: center;
+        margin-block: 3rem;
     }
 
-    a
+    &List
     {
-      color: black;
-      text-decoration: none;
+        list-style-type: none;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+
+        li {
+            font-size: 2rem;
+            transition: all 300ms ease-in;
+            cursor: pointer;
+            padding: 5px;
+            border-radius: 5px;
+
+            &:hover
+            {
+                transform: scale(1.1, 1.1);
+                background-color: #c7c7c7;
+            }
+
+            a
+            {
+                color: black;
+                text-decoration: none;
+            }
+        }
     }
-  }
 }
