--- a/2026_02_11/app/src/pages/Post/Post.module.scss
+++ b/2026_02_11/app/src/pages/Post/Post.module.scss
@@ -6,11 +6,12 @@
     overflow-y: scroll;
 
     &Title {
-        font-size: 2.4rem;
+        font-size: 5.4rem;
         text-align: center;
+        padding-block: 5rem;
     }
     &Body {
-        font-size: 1.6rem;
+        font-size: 3.2rem;
         text-align: left;
         margin: 5rem 0;
     }
@@ -45,6 +46,7 @@
         justify-content: flex-start;
         align-items: center;
         gap: 2rem;
+        width: 80%;
         margin: 4rem auto;
         padding: 0 2rem;
     }
